--- a/requirements.txt
+++ b/requirements.txt
@@ -1,211 +1,19 @@
- # requirements.txt
+# core
+Django>=4.2,<5.0
+gunicorn
 
- # Django and ecosystem
- Django
- django-crontab
- django-allauth
- djangorestframework
- django-cors-headers
- django-tailwind
- whitenoise
+# スケジューリング
+django-crontab
 
- # Scraping & parsing
- requests
- beautifulsoup4
- yt-dlp
+# スクレイピング／HTTP
+cloudscraper
+requests
+beautifulsoup4
+yt-dlp
 
- # Configuration
- python-dotenv
- # Utilities (loose pins, latest allowed)
- accelerate
- aioquic
- numpy
- pandas
- psycopg2-binary
- gunicorn
+# 画像操作
+imageio
+Pillow
 
- # Add other dependencies here as needed without strict version pinsaccelerate==1.3.0
-aioquic==1.2.0
-annotated-types==0.7.0
-anyio==4.8.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-attrs==24.2.0
-autobahn==24.4.2
-Automat==24.8.1
-beautifulsoup4==4.13.3
-binaryornot==0.4.4
-blinker==1.4
-blis==1.2.0
-blobfile==3.0.0
-Brotli==1.1.0
-catalogue==2.0.10
-certifi==2024.8.30
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.0
-click==8.1.7
-cloudpathlib==0.20.0
-cloudscraper==1.2.71
-colorama==0.4.6
-comtypes==1.4.9
-confection==0.1.5
-constantly==23.10.4
-cookiecutter==2.6.0
-cryptography==43.0.3
-cymem==2.0.11
-daphne==4.0.0
-decorator==5.2.1
-diffusers==0.32.2
-distro==1.9.0
-Django==5.1.4
-django-allauth==65.3.1
-django-cors-headers==4.6.0
-django-crontab==0.7.1
-django-tailwind==3.8.0
-djangorestframework==3.15.2
-filelock==3.16.1
-fire==0.7.0
-Flask==3.1.0
-frida==16.6.6
-frida-tools==13.6.1
-fsspec==2024.12.0
-git-filter-repo==2.47.0
-gunicorn==23.0.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.1.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.27.1
-hyperframe==6.1.0
-hyperlink==21.0.0
-idna==3.10
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-importlib_metadata==8.5.0
-incremental==24.7.2
-itsdangerous==2.2.0
-ja_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.8.0/ja_core_news_sm-3.8.0-py3-none-any.whl#sha256=65693016b7cf33ffa845af3523a9c9b8d9aabae85dfc2e46731513a5e03def04
-Jinja2==3.1.4
-kaitaistruct==0.10
-langcodes==3.5.0
-language_data==1.3.0
-ldap3==2.9.1
-llama_models==0.1.0
-llama_stack==0.1.0
-llama_stack_client==0.1.0
-lxml==5.3.0
-marisa-trie==1.2.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mitmproxy==11.1.2
-mitmproxy-windows==0.11.4
-mitmproxy_rs==0.11.4
-moviepy==2.1.2
-mpmath==1.3.0
-msgpack==1.1.0
-murmurhash==1.0.12
-mysqlclient==2.2.6
-networkx==3.4.2
-numpy==2.2.2
-outcome==1.3.0.post0
-packaging==24.1
-pandas==2.2.3
-passlib==1.7.4
-pillow==10.4.0
-preshed==3.0.9
-proglog==0.1.11
-prompt_toolkit==3.0.50
-psutil==6.1.1
-psycopg2-binary==2.9.10
-publicsuffix2==2.20191221
-pyaml==25.1.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-PyAudio==0.2.14
-pycountry==24.6.1
-pycparser==2.22
-pycryptodomex==3.21.0
-pydantic==2.10.5
-pydantic_core==2.27.2
-pydivert==2.1.0
-Pygments==2.18.0
-pylsqpack==0.3.19
-pyOpenSSL==24.2.1
-pyparsing==3.2.1
-PyPDF2==3.0.1
-pyperclip==1.9.0
-pypiwin32==223
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-slugify==8.0.4
-pyttsx3==2.98
-pytz==2024.2
-pywin32==308
-PyYAML==6.0.2
-regex==2024.11.6
-reportlab==4.2.5
-requests==2.32.3
-requests-toolbelt==1.0.0
-rich==13.9.2
-ruamel.yaml==0.18.10
-ruamel.yaml.clib==0.2.12
-safetensors==0.5.2
-selenium==4.28.1
-selenium-wire==5.1.0
-service-identity==24.2.0
-setuptools==75.3.0
-shellingham==1.5.4
-six==1.16.0
-smart-open==7.1.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-spacy==3.8.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SpeechRecognition==3.14.0
-sqlparse==0.5.1
-srsly==2.5.1
-stripe==11.4.1
-SudachiDict-core==20241021
-SudachiPy==0.6.10
-sympy==1.13.1
-termcolor==2.5.0
-text-unidecode==1.3
-thinc==8.3.4
-tiktoken==0.8.0
-tokenizers==0.21.0
-torch==2.5.1
-torchvision==0.20.1
-tornado==6.4.2
-tqdm==4.67.1
-transformers==4.48.1
-trio==0.29.0
-trio-websocket==0.11.1
-Twisted==24.10.0
-txaio==23.1.1
-typer==0.15.1
-types-python-dateutil==2.9.0.20241003
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-urwid==2.6.16
-wasabi==1.1.3
-wcwidth==0.2.13
-weasel==0.4.1
-websocket-client==1.8.0
-websockets==13.1
-Werkzeug==3.1.3
-whitenoise==6.8.2
-wrapt==1.17.2
-wsproto==1.2.0
-yt-dlp==2025.3.31
-zipp==3.21.0
-zope.interface==7.1.1
-zstandard==0.23.0
+# 環境変数
+python-dotenv
